
fidoconfig 0.6
--------------

----- cvs ci ------
Wed Jan 27 18:36:53 CET 1999
- fixed many null pointer seg-faults
----- cvs ci ------
Fri Jan 22 00:00:04 CET 1999
- added LinkWithImportLog added (gerald)
- tailing spaces will be killed in every line (gerald)

----- cvs ci ------
Tue Jan 19 19:46:05 CET 1999
- changed makefile for use without installing the libraries
----- cvs ci ------
- changed public to publicDir

----- cvs ci ------
Mon Jan 18 17:16:24 CET 1999
- fixed makefile.lnx to have fconf2aquaed
Wed Jan 13 20:12:00 CET 1999
- applied Kolyas memory bug fixes